# DialogueSystem-Raylib

./: .gitignore  CMakeLists.txt  test.json
.cache/clangd/index/: dialogue.cpp.C878BC2497734206.idx  dialogue.h.7BB4AACAB155ED65.idx
includes/: dialogue.h
src/: dialogue.cpp  json_dialogue_template.json
